# Chat_with_video

./: README.md  check_device_distribution.py  clear_xpu_memory.py  complete_fix.py  diagnose_startup.py  dxdiag_check.txt  fix_and_start.py  main.py  pyproject.toml  start_simple.py  video_chat_app.py
.qoder/quests/: deploy-video-chat-demo-with-intel-gpu.md
.qoder/rules/: 1.md
src/chat_with_video/: __init__.py  gradio_app.py  model_loader.py  video_chat_interface.py  video_chat_service.py  video_encoder.py
tests/: DEPLOYMENT_REPORT.md  __init__.py  check_device_distribution.py  complete_fix.py  comprehensive_xpu_test.py  diagnose_startup.py  diagnose_xpu.py  final_xpu_test.py  fix_and_start.py  quick_int4_test.py  quick_xpu_test.py  setup_intel_xpu.py  simple_xpu_check.py  test_gradio_simple.py  test_import.py  test_int4_model.py  test_mixed_inference.py  test_model_loading.py  test_ultimate_xpu_loading.py  test_utils.py  test_xpu_basic.py  test_xpu_fix.py  test_xpu_loading.py
